# retry_fn

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: actions.yml
src/: async_std.rs  lib.rs  macros.rs  tokio.rs
src/strategy/: constant.rs  exponential.rs  immediate.rs  mod.rs
