[package]
name = "retry_fn"
version = "0.1.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["time"], optional = true }
async-std = { version = "1.7", optional = true }

[dev-dependencies]
tokio-test = { version = "0.2" }
tokio = { version = "0.3", features = ["full"] }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]
async-runtime = ["async-std"]

